reduced down arrow width to fix overlap on clickables

--- a/src/containers/_basePage.scss
+++ b/src/containers/_basePage.scss
@@ -36,7 +36,6 @@
 }
 
 .DownArrow {
-    width: 100%;
 
     display: flex;
     justify-content: flex-end;
